--- a/src/calibre/gui2/preferences/template_functions.ui
+++ b/src/calibre/gui2/preferences/template_functions.ui
@@ -24,20 +24,21 @@
        <string>&amp;Stored Templates</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0" colspan="2" stretch="0">
-        <widget class="QTextBrowser" name="st_textBrowser">
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>75</height>
-          </size>
+       <item row="0" column="0">
+        <widget class="QPushButton" name="st_show_hide_help_button">
+         <property name="text">
+          <string>Hide help</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="1" stretch="1">
+       <item row="0" column="1" colspan="1" rowspan="2">
+        <widget class="QTextBrowser" name="st_textBrowser">
+        </widget>
+       </item>
+       <item row="2" column="1" stretch="1">
         <widget class="EmbeddedTemplateDialog" name="template_editor"/>
        </item>
-       <item row="3" column="0">
+       <item row="2" column="0">
         <layout class="QVBoxLayout" name="st_button_layout">
          <item>
           <widget class="QPushButton" name="st_clear_button">
@@ -112,144 +113,143 @@
        <string>&amp;Template Functions</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout">
-       <item row="1" column="0" colspan="2">
+       <item row="0" column="0" colspan="2">
         <widget class="Line" name="line">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <layout class="QGridLayout" name="gridLayout_3">
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_2">
+       <item row="1" column="0">
+        <layout class="QGridLayout" name="gridLayout_3">
+         <item row="0" column="0">
+          <widget class="QPushButton" name="show_hide_help_button">
+           <property name="text">
+            <string>Hide help</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1" colspan="2" rowspan="2">
+          <widget class="QTextBrowser" name="textBrowser"/>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>F&amp;unction:</string>
+           </property>
+           <property name="buddy">
+            <cstring>function_name</cstring>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QComboBox" name="function_name">
+           <property name="toolTip">
+            <string>Enter the name of the function to create.</string>
+           </property>
+           <property name="editable">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="0">
+          <widget class="QLabel" name="label_3">
+           <property name="toolTip">
+            <string/>
+           </property>
+           <property name="text">
+            <string>Argument &amp;count:</string>
+           </property>
+           <property name="buddy">
+            <cstring>argument_count</cstring>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QSpinBox" name="argument_count">
+           <property name="toolTip">
+            <string>Set this to -1 if the function takes a variable number of arguments</string>
+           </property>
+           <property name="minimum">
+            <number>-1</number>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="1">
+          <widget class="QTextEdit" name="documentation"/>
+         </item>
+         <item row="4" column="0">
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>D&amp;ocumentation:</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+           </property>
+           <property name="buddy">
+            <cstring>documentation</cstring>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="1">
+          <layout class="QHBoxLayout" name="horizontalLayout_2">
+           <item>
+            <widget class="QPushButton" name="clear_button">
              <property name="text">
-              <string>F&amp;unction:</string>
-             </property>
-             <property name="buddy">
-              <cstring>function_name</cstring>
+              <string>Clear</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="1">
-            <widget class="QComboBox" name="function_name">
-             <property name="toolTip">
-              <string>Enter the name of the function to create.</string>
-             </property>
-             <property name="editable">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_3">
-             <property name="toolTip">
-              <string/>
-             </property>
+           <item>
+            <widget class="QPushButton" name="delete_button">
              <property name="text">
-              <string>Argument &amp;count:</string>
-             </property>
-             <property name="buddy">
-              <cstring>argument_count</cstring>
+              <string>Delete</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="1">
-            <widget class="QSpinBox" name="argument_count">
-             <property name="toolTip">
-              <string>Set this to -1 if the function takes a variable number of arguments</string>
-             </property>
-             <property name="minimum">
-              <number>-1</number>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="QTextEdit" name="documentation"/>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_4">
+           <item>
+            <widget class="QPushButton" name="replace_button">
              <property name="text">
-              <string>D&amp;ocumentation:</string>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-             </property>
-             <property name="buddy">
-              <cstring>documentation</cstring>
+              <string>Replace</string>
              </property>
             </widget>
            </item>
-           <item row="3" column="1">
-            <layout class="QHBoxLayout" name="horizontalLayout_2">
-             <item>
-              <widget class="QPushButton" name="clear_button">
-               <property name="text">
-                <string>Clear</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QPushButton" name="delete_button">
-               <property name="text">
-                <string>Delete</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QPushButton" name="replace_button">
-               <property name="text">
-                <string>Replace</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QPushButton" name="create_button">
-               <property name="text">
-                <string>C&amp;reate</string>
-               </property>
-              </widget>
-             </item>
-            </layout>
+           <item>
+            <widget class="QPushButton" name="create_button">
+             <property name="text">
+              <string>C&amp;reate</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
-         <item>
-          <layout class="QVBoxLayout" name="horizontalLayout1">
-           <item>
-            <widget class="QLabel" name="label_4">
-             <property name="text">
-              <string>P&amp;rogram code (Follow Python indenting rules):</string>
-             </property>
-             <property name="buddy">
-              <cstring>program</cstring>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPlainTextEdit" name="program">
-             <property name="minimumSize">
-              <size>
-               <width>400</width>
-               <height>0</height>
-              </size>
-             </property>
-             <property name="documentTitle">
-              <string notr="true"/>
-             </property>
-             <property name="tabStopWidth">
-              <number>30</number>
-             </property>
-            </widget>
-           </item>
-          </layout>
+         <item row="2" column="2">
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>P&amp;rogram code (Follow Python indenting rules):</string>
+           </property>
+           <property name="buddy">
+            <cstring>program</cstring>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="2" rowspan="3">
+          <widget class="QPlainTextEdit" name="program">
+           <property name="minimumSize">
+            <size>
+             <width>400</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="documentTitle">
+            <string notr="true"/>
+           </property>
+           <property name="tabStopWidth">
+            <number>30</number>
+           </property>
+          </widget>
          </item>
         </layout>
-       </item>
-       <item row="0" column="0">
-        <widget class="QTextBrowser" name="textBrowser"/>
        </item>
       </layout>
      </widget>
