--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -1251,6 +1251,32 @@ them to all have the same width and height</string>
          </property>
         </widget>
        </item>
+       <item row="9" column="0">
+        <widget class="QLabel" name="label_26">
+         <property name="text">
+          <string>Show ne&amp;xt cover during auto scroll after:</string>
+         </property>
+         <property name="buddy">
+          <cstring>opt_books_autoscroll_time</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="1">
+        <widget class="QDoubleSpinBox" name="opt_books_autoscroll_time">
+         <property name="suffix">
+          <string> seconds</string>
+         </property>
+         <property name="decimals">
+          <number>1</number>
+         </property>
+         <property name="minimum">
+          <double>1.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>100000.000000000000000</double>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="quickview_tab">
