--- a/src/calibre/gui2/preferences/search.ui
+++ b/src/calibre/gui2/preferences/search.ui
@@ -79,7 +79,7 @@
           <item row="5" column="0" colspan="2">
            <widget class="QLabel" name="label_3">
             <property name="text">
-             <string>Note that this option affects all searches, including saved searches and restrictions. Therefore, if you use this option, it is best to ensure that you always use prefixes in your saved searches. For example, use &quot;series:Foundation&quot; rather than just &quot;Foundation&quot; in  a saved search</string>
+             <string>Note that this option affects all searches, including saved searches and restrictions. Therefore, if you use this option, it is best to ensure that you always use prefixes in your saved searches. For example, use &quot;series:Foundation&quot; rather than just &quot;Foundation&quot; in a saved search.</string>
             </property>
             <property name="wordWrap">
              <bool>true</bool>
