--- a/src/calibre/gui2/dialogs/tag_categories.ui
+++ b/src/calibre/gui2/dialogs/tag_categories.ui
@@ -21,7 +21,7 @@
    <item>
     <layout class="QGridLayout" name="gridLayout_4">
      <item row="0" column="0">
-      <layout class="QFormLayout" name="formLayout">
+      <layout class="QGridLayout" name="formLayout">
        <item row="0" column="0">
         <widget class="QLabel" name="label_3">
          <property name="text">
@@ -38,7 +38,7 @@
        <item row="0" column="1">
         <widget class="QComboBox" name="category_box">
          <property name="toolTip">
-          <string>Select a category to edit</string>
+          <string>Copy category name to clipboard</string>
          </property>
          <property name="editable">
           <bool>false</bool>
@@ -48,6 +48,17 @@
            <width>150</width>
            <height>0</height>
           </size>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2">
+        <widget class="QToolButton" name="copy_category_name_to_clipboard">
+         <property name="toolTip">
+          <string>Copy the category name to the clipboard</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../../../../resources/images.qrc">
+           <normaloff>:/images/edit-copy.png</normaloff>:/images/edit-copy.png</iconset>
          </property>
         </widget>
        </item>
