Correction of a mistakenly changed tool tip. Apologies for the extra noise.

--- a/src/calibre/gui2/dialogs/tag_categories.ui
+++ b/src/calibre/gui2/dialogs/tag_categories.ui
@@ -38,7 +38,7 @@
        <item row="0" column="1">
         <widget class="QComboBox" name="category_box">
          <property name="toolTip">
-          <string>Copy category name to clipboard</string>
+          <string>Select a category to edit</string>
          </property>
          <property name="editable">
           <bool>false</bool>
