Make line edit clear buttons available in more places. Fixes #1933538 [[Enhancement] Add clear buttons to the fields in the Convert book window](https://bugs.launchpad.net/calibre/+bug/1933538)

--- a/src/calibre/gui2/dialogs/metadata_bulk.ui
+++ b/src/calibre/gui2/dialogs/metadata_bulk.ui
@@ -107,6 +107,9 @@
             <property name="toolTip">
              <string>Specify how the author(s) of this book should be sorted. For example Charles Dickens should be sorted as Dickens, Charles.</string>
             </property>
+            <property name="clearButtonEnabled">
+             <bool>true</bool>
+            </property>
            </widget>
           </item>
           <item row="3" column="0">
