--- a/src/calibre/gui2/store/search/adv_search_builder.ui
+++ b/src/calibre/gui2/store/search/adv_search_builder.ui
@@ -93,7 +93,11 @@
              </widget>
             </item>
             <item>
-             <widget class="QLineEdit" name="phrase"/>
+             <widget class="QLineEdit" name="phrase">
+              <property name="clearButtonEnabled">
+               <bool>true</bool>
+              </property>
+             </widget>
             </item>
            </layout>
           </item>
@@ -110,7 +114,11 @@
              </widget>
             </item>
             <item>
-             <widget class="QLineEdit" name="any"/>
+             <widget class="QLineEdit" name="any">
+              <property name="clearButtonEnabled">
+               <bool>true</bool>
+              </property>
+             </widget>
             </item>
            </layout>
           </item>
@@ -136,7 +144,11 @@
              </widget>
             </item>
             <item>
-             <widget class="QLineEdit" name="none"/>
+             <widget class="QLineEdit" name="none">
+              <property name="clearButtonEnabled">
+               <bool>true</bool>
+              </property>
+             </widget>
             </item>
            </layout>
           </item>
@@ -240,6 +252,9 @@
            <property name="toolTip">
             <string>Enter the title.</string>
            </property>
+           <property name="clearButtonEnabled">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item row="2" column="0">
@@ -253,7 +268,11 @@
           </widget>
          </item>
          <item row="2" column="1">
-          <widget class="EnLineEdit" name="author_box"/>
+          <widget class="EnLineEdit" name="author_box">
+           <property name="clearButtonEnabled">
+            <bool>true</bool>
+           </property>
+          </widget>
          </item>
          <item row="3" column="0">
           <widget class="QLabel" name="price_label">
@@ -266,7 +285,11 @@
           </widget>
          </item>
          <item row="3" column="1">
-          <widget class="EnLineEdit" name="price_box"/>
+          <widget class="EnLineEdit" name="price_box">
+           <property name="clearButtonEnabled">
+            <bool>true</bool>
+           </property>
+          </widget>
          </item>
          <item row="4" column="0">
           <widget class="QLabel" name="label_10">
@@ -279,7 +302,11 @@
           </widget>
          </item>
          <item row="4" column="1">
-          <widget class="QLineEdit" name="format_box"/>
+          <widget class="QLineEdit" name="format_box">
+           <property name="clearButtonEnabled">
+            <bool>true</bool>
+           </property>
+          </widget>
          </item>
          <item row="5" column="0">
           <widget class="QLabel" name="label_13">
