Fix #1948520 [[Enhancement] Change icon for Filter button in the User categories window](https://bugs.launchpad.net/calibre/+bug/1948520)

--- a/src/calibre/gui2/dialogs/tag_list_editor.ui
+++ b/src/calibre/gui2/dialogs/tag_list_editor.ui
@@ -123,7 +123,7 @@
      </property>
      <property name="icon">
       <iconset resource="../../../../resources/images.qrc">
-       <normaloff>:/images/search.png</normaloff>:/images/search.png</iconset>
+       <normaloff>:/images/filter.png</normaloff>:/images/filter.png</iconset>
      </property>
     </widget>
    </item>
