--- a/src/calibre/gui2/dialogs/metadata_bulk.ui
+++ b/src/calibre/gui2/dialogs/metadata_bulk.ui
@@ -515,7 +515,7 @@ from the value in the box</string>
            <widget class="QCheckBox" name="restore_original">
             <property name="toolTip">
              <string>When doing a same format to same format conversion,
-for e.g., EPUB to EPUB, calibre saves the original EPUB
+ e.g., EPUB to EPUB, calibre saves the original EPUB
  as ORIGINAL_EPUB. This option tells calibre to restore
  the EPUB from ORIGINAL_EPUB. Useful if you did a bulk
  conversion of a large number of books and something went wrong.</string>
